@@ -183,11 +183,13 @@ dispatch_empty_file_entries(struct file_entry *head, fnum_t num_entries,
      element */
 pnum_t
 dispatch_file_entries_by_limits(struct file_entry *head,
-    struct partition **part_head, fnum_t max_entries, fsize_t max_size)
+    struct partition **part_head, fnum_t max_entries, fsize_t max_size,
+    struct program_options *options)
 {
     assert(head != NULL);
     assert((part_head != NULL) && (*part_head == NULL));
     assert(max_size >= 0);
+    assert(options != NULL);
 
     /* number of partitions created, our return value */
     pnum_t num_parts_created = 0;
@@ -195,7 +197,7 @@ dispatch_file_entries_by_limits(struct file_entry *head,
     /* when max_size is used, create a default partition (partition 0) 
        that will hold files that does not match criteria */
     if(max_size > 0) {
-        if(add_partitions(part_head, 1) != 0) {
+        if(add_partitions(part_head, 1, options) != 0) {
             fprintf(stderr, "%s(): cannot init default partition\n", __func__);
             return (num_parts_created);
         }
@@ -205,7 +207,7 @@ dispatch_file_entries_by_limits(struct file_entry *head,
     pnum_t default_partition_index = 0;
 
     /* create a first data partition and keep a pointer to it */
-    if(add_partitions(part_head, 1) != 0) {
+    if(add_partitions(part_head, 1, options) != 0) {
         fprintf(stderr, "%s(): cannot create partition\n", __func__);
         return (num_parts_created);
     }
@@ -236,7 +238,7 @@ dispatch_file_entries_by_limits(struct file_entry *head,
                     ((max_size > 0) && (((*part_head)->size + head->size) > max_size))) {
                     /* and we reached last partition, chain a new one */
                     if((*part_head)->nextp == NULL) {
-                        if(add_partitions(part_head, 1) != 0) {
+                        if(add_partitions(part_head, 1, options) != 0) {
                             fprintf(stderr, "%s(): cannot create partition\n",
                                 __func__);
                             return (num_parts_created);
