@@ -28,6 +28,7 @@
 #define _PARTITION_H
 
 #include "types.h"
+#include "options.h"
 
 #include <sys/types.h>
 
@@ -41,7 +42,8 @@ struct partition {
     struct partition* prevp;    /* previous one */
 };
 
-int add_partitions(struct partition **head, pnum_t num_parts);
+int add_partitions(struct partition **head, pnum_t num_parts,
+    struct program_options *options);
 void uninit_partitions(struct partition *head);
 pnum_t find_smallest_partition_index(struct partition *head);
 struct partition * get_partition_at(struct partition *head, pnum_t index);
