@@ -1,5 +1,6 @@
 2011/??/??  0.4
     - Now builds on Solaris (using FreeBSD's fts(3))
+    - Added preloading/rounding options -p, -q and -r. See fpart(1)
 2011/12/06  0.3
     - Switch to fts(3)
     - Replaced getline(3) calls with fgets(3) for compatibility
